--- a/app/javascript/flavours/glitch/styles/gts/sizes.scss
+++ b/app/javascript/flavours/glitch/styles/gts/sizes.scss
@@ -11,4 +11,5 @@
     /* Components */
     --size-avatar: 46px;
     --size-icon: 20px;
+    --size-header-block: #{$ui-header-height};
 }
